@@ -1,5 +1,6 @@
 package com.xuanwugate.rpc;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 
 import com.alibaba.fastjson.JSONArray;
@@ -10,6 +11,7 @@ import com.xuanwugate.response.ErrorInfo;
 /**
  * RPCResultFactory
  */
+@SuppressWarnings("unchecked")
 public final class RPCResultFactory {
     public static <T> T parse(final Class<T> clazz,final String jsonStr){
         final JSONObject jsonObject = JSONObject.parseObject(jsonStr);
@@ -58,10 +60,10 @@ public final class RPCResultFactory {
                 if(isRPCSpecificResult){
                     RPCSpecificResult objTmp;
 					try {
-                        objTmp = (RPCSpecificResult)clazz.newInstance();
+                        objTmp = (RPCSpecificResult)clazz.getDeclaredConstructor().newInstance();
                         objTmp.init(jsonResult);
                         obj = (T)objTmp;
-					} catch (InstantiationException | IllegalAccessException e) {
+					} catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
 						e.printStackTrace();
 					}
                 }
@@ -77,10 +79,10 @@ public final class RPCResultFactory {
                 if(isRPCSpecificResult){
                     RPCSpecificResult objTmp;
 					try {
-                        objTmp = (RPCSpecificResult)clazz.newInstance();
+                        objTmp = (RPCSpecificResult)clazz.getDeclaredConstructor().newInstance();
                         objTmp.init(jsonResult);
                     return (T)objTmp;
-					} catch (InstantiationException | IllegalAccessException e) {
+					} catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
 						e.printStackTrace();
 					}
                 }
